style.css
*{
    font-family: 'Gabarito', sans-serif;
    line-height: 1.6;
    list-style: none;
    margin: 0;
    padding: 0;
    text-decoration: none;
    user-select: none;
}

:root{
    --darkest-color: #433326;
    --lillac-color: #D3BEDF;
    --blue-color: #7C97B6;
    --green-color: #96A991;
    --brown-color: #92725A;
    --bege-color: #F5F0F0; 
    --light-color: #FBFBFB;
}

body{
    background-image: url(/assets/background-image.png);
    cursor: auto;
    overflow-x: hidden;
    /* hide horizontal scroll */
}

body::-webkit-scrollbar {
    width: 15px;
    /* width of the entire scrollbar */
}

body::-webkit-scrollbar-track {
    background: var(--light-color);
    /* color of the tracking area */
}

body::-webkit-scrollbar-thumb {
    background-color: var(--blue-color);
    /* color of the scroll thumb */
    border-radius: 20px;
    /* creates padding around scroll thumb */
    border: 3px solid var(--light-color);
}

@media (max-width: 675px) {
    body {
        -ms-overflow-style: none; /* Remove barra de rolagem no IE e Edge */
        scrollbar-width: none; /* Remove barra de rolagem no Firefox */
    }
}

/*
#custom-cursor {
    position: fixed;
    top: 0;
    left: 0;
    width: 32px;
    height: 32px;
    pointer-events: none;
    z-index: 9999;
    transform: translate(-50%, -50%);
}
*/

/* header */
header{
    position: fixed;
    width: 100vw;
    z-index: 2;
}

.menu{
    display: flex;
    justify-content: center;
    gap: 20px;
    margin-top: 20px;
}

.sections{
    border: 2px solid var(--darkest-color);
    border-radius: 34px;
    box-sizing: border-box;
    background-color: white;
    display: inline-flex;
    flex-direction: row;
    padding: 8px;
}

.sections li a{
    border-radius: 25px;
    color: var(--darkest-color);
    display: flex;
    font-size: 16px;
    padding: 9px 16px;
}

.sections li a:hover{
    background-color: var(--lillac-color);
    transition: background-color 0.2s ease-in-out;
}

/* playful hero */
.hero{ 
    align-items: center;
    display: flex;
    justify-content: center;
    height: 72vh;
}

.amanda-logo{
    padding-top: 28vh;
    width: 560px;
}

/* stickers */
.sticker{
    cursor: grab;
    position: absolute;
    transition: transform 0.3s ease;
    transform: rotate(0deg);
    z-index: 1;
}

.sticker:active{
    cursor: grabbing;
}

.sticker:hover, .sticker.grabbing{
    transform: rotate(0deg);
}

/* about section*/
#about{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 28vh 0px 0px;
}

.about-card{
    align-items: center;
    background-color: #C07F7F;
    border-radius: 20px;
    display: inline-flex;
    flex-direction: column;
    margin: 4px 60px 60px;
    max-width: 538px;
    padding: 14px;
}

.about-card-title{
    color: var(--light-color);
    font-size: 28px;
    font-weight: 630;
    letter-spacing: 0.04rem;
    margin-bottom: 14px;
}

.about-card-content{
    background-color: var(--light-color);
    border-radius: 6px;
    color: var(--darkest-color);
    font-size: 20px;
    padding: 20px 32px;
}

.about-card-content p{
    line-height: 26px;
}

/*projects*/
#projects{
    margin: auto;
    max-width: 1000px;
    padding: 150px 50px 0px;
}

#projects div {
    display: flex;
    justify-content: center;
    margin-bottom: 50px;
}

.projects-title{
    color: var(--light-color);
    border-radius: 20px;
    background-color: #A48DB2;
    display: inline-block;
    font-size: 26px;
    font-weight: 630;
    letter-spacing: 0.04rem;
    padding: 8px 70px;
    text-align: center;
}

.projects-list{
    display: flex;
    gap: 48px;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.project-kroxe{
    transform: rotate(3deg); 
    transition: transform 0.3s ease;
}

.project-mind{
    transform: rotate(-3deg); 
    transition: transform 0.3s ease;
}

.project-encantado{
    transform: rotate(2deg); 
    transition: transform 0.3s ease;
}

.project-ac{
    transform: rotate(-2deg); 
    transition: transform 0.3s ease;
}

.project-asterisco{
    transform: rotate(1deg); 
    transition: transform 0.3s ease;
}

.project-load {
    cursor: default;
}

.project-kroxe:hover, .project-mind:hover, .project-encantado:hover, .project-ac:hover, .project-asterisco:hover{
    transform: rotate(0deg);
}

/*contact*/
#contact{
    padding: 150px 50px 0px;
}

#contact div {
    display: flex;
    justify-content: center;
    margin-bottom: 30px;
}

.portfolio-link{
    color: var(--light-color);
    border-radius: 20px;
    background-color: var(--blue-color);
    display: inline-block;
    font-size: 26px;
    font-weight: 580;
    letter-spacing: 0.04rem;
    padding: 8px 70px;
    text-align: center;
}

.contact-list{
    display: flex;
    gap: 20px;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.icon-github{
    transform: rotate(8deg); 
    transition: transform 0.3s ease;
}

.icon-behance{
    transform: rotate(-6deg); 
    transition: transform 0.3s ease;
}

.icon-linkedin{
    transform: rotate(4deg); 
    transition: transform 0.3s ease;
}

.icon-gmail{
    transform: rotate(-8deg); 
    transition: transform 0.3s ease;
}

.icon-github:hover, .icon-behance:hover, .icon-linkedin:hover, .icon-gmail:hover{
    transform: rotate(0deg);
}

.obrigada{
    display: block;
    margin: 130px auto 0px;
}

@media (max-width: 675px) {
    .hero {
        display: none; /* Oculta a seção hero no mobile */
    }

    .obrigada {
        display: none; /* Oculta o elemento */
    }
}

